@@ -1,3 +1,5 @@
+	* active_dht_limit, active_tracker_limit and active_lsd_limit now interpret -1 as infinite
+
 0.16.6 release
 
 	* fixed verbose log error for NAT holepunching
